--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Chris Cressman, front end web developer</title>
-<p>Chris Cressman is a front end web developer at <a href="http://weblinc.com/">WebLinc</a> in Philadephia. Email him at <a href="mailto:chris@chriscressman.com">chris@chriscressman.com</a>.</p>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Chris Cressman, front end web developer</title>
+</head>
+<body>
+	<p>Chris Cressman is a front end web developer at <a href="http://weblinc.com/">WebLinc</a> in Philadephia. Email him at <a href="mailto:chris@chriscressman.com">chris@chriscressman.com</a>.</p>
+	<p>Looking for <a href="/wedding/">wedding information</a>?</p>
+</body>
+</html>
