Edit wedding page content

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -1,10 +1,176 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>WEDDING</title>
+	<meta charset="utf-8">
+	<title>The Wedding of Michelle Todd &amp; Chris Cressman</title>
+	<style>
+		body {
+			font: 12px/1.3 sans-serif;
+		}
+		h1 {
+			margin: 0 0 0.5em;
+		}
+		h2 {
+			margin: 0 0 0.75em;
+		}
+		h3 {
+			margin: 0 0 0.75em;
+		}
+		p {
+			margin: 0 0 1em;
+		}
+		table {
+			margin: 0 0 1em;
+		}
+			tr {}
+				th {
+					text-align: left;
+					font-weight: normal;
+				}
+				td {}
+		.section {
+			padding: 1em 0 0;
+			border-top: 1px solid;
+		}
+			.section .section {
+				padding: 0;
+				border: none;
+			}
+		.panel {
+			margin: 0 0 1em;
+			padding: 1em 1em 0;
+			background: whitesmoke;
+			border: 1px solid silver;
+			border-radius: 10px;
+		}
+		.header {}
+			.header h1 {}
+				.header .subtitle {
+					display: block;
+					font-size: smaller;
+				}
+				.header .title {
+					display: block;
+				}
+			.header .date {}
+			.header .location {}
+		.footer {
+			padding: 1em 0 0;
+			border-top: 1px solid;
+		}
+	</style>
 </head>
 <body>
-	WEDDING
+	<div class="header">
+		<h1>
+			<span class="subtitle">The Wedding of</span>
+			<span class="title">Michelle Todd &amp; Chris Cressman</span>
+		</h1>
+		<p class="date">Sunday, September 2, 2012</p>
+		<p class="location">Joseph Ambler Inn, North Wales, Pennsylvania</p>
+	</div>
+	<div class="panel">
+		<h2>Draft</h2>
+		<p>This website is a draft. Please check back later for more accurate information.</p>
+	</div>
+	<div id="details" class="section">
+		<h2>From the Bride &amp; Groom</h2>
+		<p>Dear invited guests,</p>
+		<p>Please join us at our wedding on Sunday, September 2, 2012. The entire event (ceremony, cocktail hour, and reception) will be held at <a href="#location">Joseph Ambler Inn</a>. A limited number of <a href="#rooms">overnight rooms</a> will be available at the same location.</p>
+		<p>Our wedding date coincides with Labor Day weekend, so if you plan to attend please mark your calendar early, and thank you for celebrating with us!</p>
+		<p>Love,<br />Michelle &amp; Chris</p>
+	</div>
+	<div id="schedule" class="section">
+		<h2>Schedule</h2>
+		<p>The schedule for the day is as follows:</p>
+		<table>
+			<tbody>
+				<tr>
+					<th>Ceremony</th>
+					<td>5pm&ndash;5:30pm</td>
+				</tr>
+				<tr>
+					<th>Cocktail Hour</th>
+					<td>5:30pm&ndash;6:30pm</td>
+				</tr>
+				<tr>
+					<th>Reception</th>
+					<td>6:30pm&ndash;10:30pm</td>
+				</tr>
+			</tbody>
+		</table>
+		<p>All events will be held at <a href="#location">Joseph Ambler Inn</a>.</p>
+	</div>
+	<div id="location" class="section">
+		<h2>Location &amp; Directions</h2>
+		<p>Joseph Ambler Inn<br />1005 Horsham Road, North Wales, PA 19454</p>
+		<table>
+			<tbody>
+				<tr>
+					<th>Phone</th>
+					<td>(215) 362-7500</td>
+				</tr>
+				<tr>
+					<th>Email</th>
+					<td>
+						<a href="mailto:info@josephamblerinn.com">info@josephamblerinn.com</a>
+					</td>
+				</tr>
+				<tr>
+					<th>Website</th>
+					<td>
+						<a href="http://www.josephamblerinn.com">www.josephamblerinn.com</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<p>
+			<a href="#">
+				<img alt="" src="http://maps.googleapis.com/maps/api/staticmap?center=1005+Horsham+Rd+North+Wales+PA&amp;zoom=14&amp;size=400x300&amp;sensor=false" />
+			</a>
+		</p>
+		<p>
+			<a href="#">View larger map &amp; get directions</a>
+		</p>
+	</div>
+	<div id="rooms" class="section">
+		<h2>Overnight Rooms</h2>
+		<p>Rates for rooms.
+		<p>When guests call for hotel room, they give name, email, and credit card info. Credit card will not be charged right away.
+		<p>We have a reserved block of rooms at a special rate. Can't choose your room.
+	</div>
+	<div id="rsvp" class="section">
+		<h2>RSVP</h2>
+		<p>RSVP/regret form.
+	</div>
+	<div id="gifts" class="section">
+		<h2>Gift Registries</h2>
+		<p>Links to registries.
+		<p>Mention of cash gifts for honeymoon and house.
+	</div>
+	<div id="contact" class="section">
+		<h2>Our Contact Info</h2>
+		<div id="michelle" class="section">
+			<h3>Michelle Todd</h3>
+			<p>https://www.facebook.com/michelletodd
+			<p>michelle@michellecressman.com</p>
+		</div>
+		<div id="chris" class="section">
+			<h3>Chris Cressman</h3>
+			<p>https://www.facebook.com/chriscressman
+			<p>chris@chriscressman.com</p>
+			<p>Print all wedding info</p>
+		</div>
+	</div>
+	<div class="footer">
+		<p><a class="print" role="button" href="#">Print wedding info</a> (1 page)</p>
+		<p><a href="#contact">Contact Michelle &amp; Chris</a></p>
+		<p>Please check back for the latest information</p>
+	</div>
+	<div class="panel">
+		<h2>To Do</h2>
+		<p>Confirm content with Wendy, Teg, and Keenan.</p>
+		<p>Add Google analytics to home page and wedding page.</p>
+	</div>
 </body>
 </html>
