--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
 <body>
 	<p>Chris Cressman is a front end web developer at <a href="http://weblinc.com/">WebLinc</a> in Philadephia. Email him at <a href="mailto:chris@chriscressman.com">chris@chriscressman.com</a>.</p>
 	<p>Looking for <a href="/wedding/">wedding information</a>?</p>
+	<script>
+		// Begin Google Analytics
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-27916540-1']);
+		_gaq.push(['_setDomainName', 'chriscressman.com']);
+		_gaq.push(['_trackPageview']);
+		
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+		// End Google Analytics
+		</script>
 </body>
 </html>
