Add viewport meta tag to wedding page

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width" />
 	<title>The Wedding of Michelle Todd &amp; Chris Cressman</title>
 	<script>document.getElementsByTagName('html')[0].className = 'js';</script>
 	<style>
