Work around scroll issue on wedding page

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -366,6 +366,7 @@
 								.addClass('selected')
 								.siblings()
 									.removeClass('selected');
+					$(window).scrollTop('0');
 				}
 	
 				// Attach events
