Show panels on wedding site in IE6

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -154,6 +154,7 @@
 						.content .section {}
 						.js .content .section {
 							display: none;
+							_display: block;
 						}
 						.js .content .selected {
 							display: block;
