Hide wedding nav if JS is off and hide decor in IE6

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -91,6 +91,7 @@
 						display: block;
 					}
 					.imgdecor {
+						_display: none;
 						position: absolute;
 						width: 4px;
 						height: 4px;
@@ -127,11 +128,16 @@
 							font-size: 12px;
 						}
 					.nav {
+						display: none;
 						margin: 0;
 						padding: 4px 0;
 						border-top: 3px solid #5c3a2e;
 						border-bottom: 3px solid #5c3a2e;
 						list-style: none;
+					}
+					.js .nav {
+						display: block;
+						_display: block;
 					}
 						.nav li {
 							display: inline;
