Fix typo in CSS file

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -137,7 +137,7 @@
 					}
 					.js .nav {
 						display: block;
-						_display: block;
+						_display: none;
 					}
 						.nav li {
 							display: inline;
