Hide border on linked images on wedding page

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -74,6 +74,9 @@
 			a:hover {
 				text-decoration: underline;
 			}
+				a img {
+					border: none;
+				}
 			.loose {
 				margin: 0 0 24px;
 			}
