--- a/wedding/index.html
+++ b/wedding/index.html
@@ -277,6 +277,9 @@
 					<a href="#rooms">Rooms</a>
 				</li>
 				<li>
+					<a href="#registry">Gift Registry</a>
+				</li>
+				<li>
 					<a href="#contact">Contact</a>
 				</li>
 			</ul>
@@ -374,6 +377,11 @@
 					<h2>Overnight Rooms</h2>
 					<p>A limited number of overnight rooms will be available at <a href="#location">Joseph Ambler Inn</a> for our wedding at a rate of $135.</p>
 					<p>In order to get this special rate, please contact Joseph Ambler Inn and ask to reserve a room for the Michelle Todd - Chris Cressman wedding.</p>
+				</div>
+				<div id="section-registry" class="section">
+					<h2>Gift Registry</h2>
+					<p>If you&rsquo;d like to bring a gift, we are registered at Gift Registry 360 to make shopping easier.</p>
+					<p><a target="_blank" href="http://www.giftregistry360.com/wishlist/cressman">View Gift Registry</a></p>
 				</div>
 				<div id="section-contact" class="section">
 					<h2>Contact the Bride &amp; Groom</h2>
