Add more contact info

--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <title>Chris Cressman, front end web developer</title>
 </head>
 <body>
-    <p>Chris Cressman is a front end web developer at <a href="http://weblinc.com/">WebLinc</a> in Philadephia. Email him at <a href="mailto:chris@chriscressman.com">chris@chriscressman.com</a>.</p>
+    <p>Chris Cressman is a front end web developer at <a href="http://weblinc.com/">WebLinc</a> in Philadephia.</p>
+    <table>
+        <tbody>
+            <tr>
+                <th>Email</th>
+                <td><a href="mailto:chris@chriscressman.com">chris@chriscressman.com</a></td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td><a href="mailto:ccressman@weblinc.com">ccressman@weblinc.com</a></td>
+            </tr>
+            <tr>
+                <th>GitHub</th>
+                <td><a href="https://github.com/chriscressman">chriscressman</a></td>
+            </tr>
+        </tbody>
+    </table>
     <script>
         // Begin Google Analytics
         var _gaq = _gaq || [];
